# antigravity-awesome-skills

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
scripts/: install.sh
src/: main.rs  meta_repository.rs  output.rs  repository.rs  skill_io.rs
src/commands/: add.rs  catalog_for_agent.rs  info.rs  list.rs  mod.rs  search.rs  setup.rs  update.rs  version.rs
src/skills/awesome-skills-cli/: SKILL.md
src/skills/recommend-awesome-skills/: SKILL.md
tests/: add.rs  catalog.rs  info.rs  legacy.rs  list.rs  pipes.rs  search.rs  setup.rs  version.rs
