[package]
name = "awesome-skills-cli"
version = "9.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11.1"
ureq = { version = "3.1.2", default-features = true, features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
serde_json = "1.0.140"
tempfile = "3.20.0"
